--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,9 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation group: 'io.quarkus', name: 'quarkus-core', version: '0.11.0'
+    implementation group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.1.1'
+
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.0'
+    testImplementation group: 'io.quarkus', name: 'quarkus-junit5', version: '0.11.0'
 }
