--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,11 @@ buildscript {
     }
 }
 
-apply plugin: 'java'
+plugins {
+    id 'java'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.21'
+}
+
 apply plugin: 'maven'
 apply plugin: 'io.quarkus.gradle.plugin'
 
@@ -24,6 +28,7 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    gradlePluginPortal()
     maven {
         url 'http://repository.jboss.org/nexus/content/groups/public'
     }
@@ -34,8 +39,27 @@ dependencies {
 
     // Kotlin support
     implementation 'io.quarkus:quarkus-kotlin:0.11.0'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.21'
+    implementation 'io.quarkus:quarkus-arc:0.11.0'
+    implementation 'io.quarkus:quarkus-gradle-plugin:0.11.0'
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+    implementation 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.21'
+    implementation 'org.jetbrains.kotlin:kotlin-allopen:1.3.21'
+    implementation("org.jetbrains.intellij.deps:trove4j:1.0.20181211")
+    implementation("org.jetbrains.kotlin:kotlin-script-runtime:1.3.21")
 
     testImplementation group: 'io.quarkus', name: 'quarkus-junit5', version:'0.11.0'
     testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '3.3.0'
+}
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+
+quarkus {
+    setSourceDir("src/main/kotlin")
+    setOutputDirectory("build/classes/kotlin/main")
 }
